Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35652

Race between setReplicationTopology and processing of the resolved SyncWrite queue

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine MH 2nd Beta

    Description

      There exists a race where we may have SyncWrite objects in the resolved SyncWrite queue and before we process them we call setReplicationTopology. This could free the pointers to the ReplicationChain objects that each SyncWrite holds and are used when attempting to complete them. This causes memcached to crash. This is exacerbated by the background completion of SyncWrites.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty